# innspace_rover

./: .gitignore  README.md
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: motor_controllers.yaml
src/rover_description/launch/: launch_sim.launch.py  rsp.launch.py
src/rover_description/meshes/: base_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  rear_left_wheel_link.STL  rear_right_wheel_link.STL
src/rover_description/meshes/bases/: body_box.STL  body_box.stl  body_box2.stl
src/rover_description/meshes/sensors/: OAK-D.daeZone.Identifier
src/rover_description/robots/: rover.urdf.xacro  rover_description.csv  rover_description.urdf.xacro
src/rover_description/urdf/: inertials.xacro  materials.xacro
src/rover_description/urdf/bases/: body.urdf.xacro  ros2_control.xacro  rover_description.urdf.xacro
src/rover_description/urdf/sensors/: camera.urdf.xacro  imu.xacro  lidar.urdf.xacro  oak_d.xacro  odometry.urdf.xacro
src/rover_localization/: CMakeLists.txt  package.xml
src/rover_localization/config/: ekf.yaml
src/rover_localization/launch/: ekf.launch.py  localization.launch.py
src/rover_mapping/: CMakeLists.txt  package.xml
src/rover_mapping/config/: mapper_params_online_async.yaml  nav2_costmap_2d.yaml  nav2_params.yaml
src/rover_mapping/launch/: online_async.launch.py
src/rover_simulation/: CMakeLists.txt  package.xml
src/rover_simulation/launch/: gazebo.launch.py  marsyard.launch.py  maze.launch.py
src/rover_simulation/rviz/: base_config.rviz
(+10 files in other folders)
